Fixed the Fahrenheit link, checked for solutions
Tried to fix that my img and temperature are not aligned

--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,10 @@ body {
 
 h1 {
     color: #878787; 
-    display: block; 
     font-size: 24 px; 
     font-weight: 100; 
-    height: 28px; 
-    line-height: 29px; 
-    text-align: left; 
-    margin-bottom: 0; 
+    line-height: 29px;
+    margin-bottom: 0;  
 }
 
 ul {
